# RustBasics

./: README.md
assignments/pars/: Cargo.toml
assignments/rslogo/: Cargo.toml  README.md  mark_request.md
final/: starter (1).tar
labs/: exercises_04_starter.tar  exercises_05_starter.tar  exercises_08_starter.tar  exercises_10_starter.tar
labs/lab01/: readme.md
labs/lab02/: readme.md
labs/lab03/: README.md
labs/lab04/: README.md
labs/lab05/: README.md
labs/lab07/: README.md
labs/lab08/: README.md
labs/lab09/: README.md
lectrues/week1/: notes.md
others/lifetimekata/: Cargo.toml  README.md
others/lifetimekata/exercises/00_welcome/lifetimes2/: Cargo.toml
others/lifetimekata/exercises/00_welcome/lifetimes2/src/: main.rs
others/lifetimekata/exercises/00_welcome/lifetimes3/: Cargo.toml
others/lifetimekata/exercises/01_lifetimes_needed/exercise/src/: main.rs
others/lifetimekata/exercises/02_lifetimes_explained/exercise/: Cargo.toml
others/lifetimekata/exercises/02_lifetimes_explained/solutions/: Cargo.toml
others/lifetimekata/exercises/04_mutable_references_and_containers/exercise/src/: lib.rs
others/lifetimekata/exercises/05_lifetimes_on_types/exercise/src/: lib.rs
others/lifetimekata/exercises/06_lifetimes_on_impls/: README.md
others/lifetimekata/exercises/08_finale/exercise/src/: main.rs
others/lifetimekata/exercises/09_further_reading/: README.md
others/lifetimekata/exercises/10_footnote_lifetimes_on_trait_objects/: README.md
others/macrokata/: README.md
others/rust_pl/: README.md
workshop/ws01/: data.in  tasks.md  (+1 more)
(+122 files in other folders)
