[workspace]

members = [ "exercises/00_welcome/lifetimes1", "exercises/00_welcome/lifetimes2", "exercises/00_welcome/lifetimes3", "exercises/01_lifetimes_needed/exercise",
        "exercises/02_lifetimes_explained/exercise",
        "exercises/02_lifetimes_explained/solutions",
        "exercises/03_lifetime_elision/exercise",
        "exercises/03_lifetime_elision/solutions",
        "exercises/04_mutable_references_and_containers/exercise",
        "exercises/04_mutable_references_and_containers/solutions",
        "exercises/05_lifetimes_on_types/exercise",
        "exercises/05_lifetimes_on_types/solutions",
        "exercises/07_special_lifetimes/exercise",
        "exercises/07_special_lifetimes/solutions",
        "exercises/08_finale/exercise",
        "exercises/08_finale/solutions", "exercises/09_further_reading/exercise",
]
